Fix masked address and friendly name alignment

--- a/src/modules/dashboard/components/ColonyEvents/ColonyEventsListItem.css
+++ b/src/modules/dashboard/components/ColonyEvents/ColonyEventsListItem.css
@@ -110,7 +110,6 @@
 }
 
 .tooltip span {
-  vertical-align: text-top;
   font-size: var(--size-tiny);
 }
 
